--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     class="fa-brands fa-github fa-xl">github</i></a>
             <a href="https://www.linkedin.com/in/dafa-rizki-71abb7153/" target="_blank" rel="noopener noreferrer"><i
                     class="fa-brands fa-linkedin fa-xl">linkedin</i></a>
-            <p>2023. Kaltik</p>
+            <p>2023. Kaltik by dafarpr</p>
         </footer>
     </main>
     <script src="src/script.js"></script>
