--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p id="hasil-luas"></p>
                     </div>
                     <button type="submit" class="btn-hitung" onclick="Luas()">Hitung</button>
-                    <button type="reset" class="btn-reset" onclick="reset()">Reset</button>
+                    <button type="reset" class="btn-reset" onclick="resetLuas()">Reset</button>
                 </div>
             </div>
             <div class="card w-100 flex-center m-20" id="persegi">
@@ -64,7 +64,7 @@
                         <p id="hasil-keliling"></p>
                     </div>
                     <button type="submit" class="btn-hitung" onclick="Keliling()">Hitung</button>
-                    <button type="reset" class="btn-reset" onclick="reset()">Reset</button>
+                    <button type="reset" class="btn-reset" onclick="resetKeliling()">Reset</button>
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                         <p id="hasil-luasPP"></p>
                     </div>
                     <button type="submit" class="btn-hitung" onclick="LuasPP()">Hitung</button>
-                    <button type="reset" class="btn-reset">Reset</button>
+                    <button type="reset" class="btn-reset" onclick="resetLuasPP()">Reset</button>
                 </div>
             </div>
             <div class="card w-100 flex-center m-20" id="PPanjang">
@@ -110,7 +110,7 @@
                         <p id="hasil-kelilingPP"></p>
                     </div>
                     <button type="submit" class="btn-hitung" onclick="KelilingPP()">Hitung</button>
-                    <button type="reset" class="btn-reset">Reset</button>
+                    <button type="reset" class="btn-reset" onclick="resetKelilingPP()">Reset</button>
                 </div>
             </div>
         </section>
@@ -119,7 +119,7 @@
                     class="fa-brands fa-github fa-xl">github</i></a>
             <a href="https://www.linkedin.com/in/dafa-rizki-71abb7153/" target="_blank" rel="noopener noreferrer"><i
                     class="fa-brands fa-linkedin fa-xl">linkedin</i></a>
-            <p>2023. Kaltik by dafarpr</p>
+            <p>2023. Kaltik</p>
         </footer>
     </main>
     <script src="src/script.js"></script>
